--- a/Earthquakes_past7days/static/css/style.css
+++ b/Earthquakes_past7days/static/css/style.css
@@ -14,3 +14,11 @@ body,
   background-color: #fff;
   border-radius: 5px;
 }
+
+.legend i {
+  float: left;
+  width: 18px; 
+  height: 18px; 
+  margin-right: 8px; 
+  opacity: 0.7; 
+}
